BugzID: 19912 Reduce aligned embedded video max-width by 1.5%

--- a/custom/themes/lib_unb_ca/src/scss/overrides/_media.scss
+++ b/custom/themes/lib_unb_ca/src/scss/overrides/_media.scss
@@ -34,7 +34,7 @@
 .align-center .field--name-field-media-oembed-video,
 .align-left .field--name-field-media-oembed-video,
 .align-right .field--name-field-media-oembed-video {
-  max-width: $max-breakpoint * 0.66;
+  max-width: $max-breakpoint * 0.645;
   width: 66vw;
 }
 .align-center .field--name-field-media-oembed-video {
